Bug 396820 - Buttons in new mail notifications don't work.
Summary: Buttons in new mail notifications don't work.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-24 17:00 UTC by Antonio Rojas
Modified: 2018-12-10 21:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2018-07-24 17:00:16 UTC
In 18.07.80 there is a new button "Mark as read" in new mail notifications. Clicking on this button doesn't have any effect.
Comment 1 Laurent Montel 2018-07-31 05:58:30 UTC
it seems to work here.
Comment 2 Antonio Rojas 2018-08-21 06:29:54 UTC
Still valid here in 18.08.0. In fact, none of the buttons work.
Comment 3 Lê Hoàng Phương 2018-11-07 23:39:42 UTC
I'm on KDE Neon and there is even no button for me. Click on the notification also does nothing (is it supposed to open Kmail?).
Comment 4 Antonio Rojas 2018-11-08 07:56:34 UTC
(In reply to Lê Hoàng Phương from comment #3)
> I'm on KDE Neon and there is even no button for me. Click on the
> notification also does nothing (is it supposed to open Kmail?).

You need to enable them in the new mail notifier plugin settings.
Comment 5 Laurent Montel 2018-12-07 13:36:05 UTC
Git commit a5040bdab119c035f8218b1991c86b4490fa03a9 by Laurent Montel.
Committed on 07/12/2018 at 13:35.
Pushed by mlaurent into branch 'Applications/18.12'.

Fix Bug 396820 - Buttons in new mail notifications don't work.
FIXED-IN: 5.10.1

M  +3    -3    agents/newmailnotifier/specialnotifierjob.cpp

https://commits.kde.org/kdepim-runtime/a5040bdab119c035f8218b1991c86b4490fa03a9