Fix Bug 396820 - Buttons in new mail notifications don't work.

BUG: 396820
FIXED-IN: 5.10.1